28.12.2024 - feature/107feature/107-global-exception-handler | removed excluded paths