@@ -6,8 +6,10 @@ import org.league.app.util.JWTUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cloud.gateway.filter.GatewayFilter;
 import org.springframework.cloud.gateway.filter.factory.AbstractGatewayFilterFactory;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
 import org.springframework.util.AntPathMatcher;
+import reactor.core.publisher.Mono;
 
 import java.util.List;
 
@@ -18,8 +20,6 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
     @Autowired
     private JWTUtil jwtUtil;
 
-    private final AntPathMatcher pathMatcher = new AntPathMatcher();
-
     public AuthenticationFilter() {
         super(Config.class);
     }
@@ -29,61 +29,33 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
         return (((exchange, chain) -> {
             String path = exchange.getRequest().getURI().getPath();
 
-            for (String excludedPath : config.getExcludedPaths()) {
-                if (matchesPath(path, excludedPath)) {
-                    return chain.filter(exchange);
-                }
-            }
             log.info("Request path: {}", path);
 
-            if (!exchange.getRequest().getHeaders().containsKey("Authorization")) {
-                throw new RuntimeException("Authorization header is missing");
-            }
+            var authHeader = exchange.getRequest().getHeaders().get("Authorization");
 
-            String authHeader = exchange.getRequest().getHeaders().get("Authorization").get(0);
-
-            if (authHeader != null && authHeader.startsWith("Bearer ")) {
-                authHeader = authHeader.substring(7);
-                log.info("Extracted token: {}", authHeader);
+            if (authHeader == null || !authHeader.getFirst().startsWith("Bearer ")) {
+               return chain.filter(exchange);
             }
+            String substring = authHeader.getFirst().substring(7);
+            log.info("Extracted token: {}", authHeader);
 
             try {
-                jwtUtil.validatedToken(authHeader);
+                jwtUtil.validatedToken(substring);
                 log.info("Token is valid");
             } catch (Exception e) {
                 log.error("Invalid token");
-                throw new RuntimeException("Invalid token");
+                return Mono.just(exchange.getResponse())
+                        .flatMap(response -> {
+                            response.setStatusCode(org.springframework.http.HttpStatus.UNAUTHORIZED);
+                            return response.setComplete();
+                        });
             }
 
             return chain.filter(exchange);
         }));
     }
 
-    private boolean matchesPath(String requestPath, String excludedPath) {
-        return pathMatcher.match(excludedPath, requestPath);
-    }
-
-    @Getter
     public static class Config {
-        private final List<String> excludedPaths = List.of(
-                "/auth/refresh-token",
-                "/actuator/health",
-                "/auth/registration",
-                "/auth/activate",
-                "/auth/login",
-                "/user/profile/public/*",
-                "/user/avatar/*",
-                "/team/allTeams",
-                "/team/currentTeam/*",
-                "/team/*/user-role",
-                "/team/team-logo/*",        
-                "/user/allUsers",
-                "/user/send-reset-password",
-                "/user/set-new-password/*",
-                "/sport/allSports",
-                "/sport/regular-sports",
-                "/sport/e-sports",
-                "/sport/exact-sport/*"
-        );
+
     }
 }
